# Back-end/Admin-API/src/server.ts
@@ -11,6 +11,7 @@ import newsletterRouter from './routes/newsletter.route';
 import eventRouter from './routes/event.route';
 import gymRouter from './routes/gym.route';
 import coachRouter from './routes/coach.route';
+import suggestionRouter from './routes/suggestion.route';
 
 export default class Server {
     readonly port: number;
@@ -40,6 +41,7 @@ export default class Server {
         app.use('/api/events', eventRouter);
         app.use('/api/gyms', gymRouter);
         app.use('/api/coachs', coachRouter);
+        app.use('/api/suggestions', suggestionRouter);
         app.use('/uploads', express.static('../uploads'));
         app.use('*', (req: Request, res: Response) => {
             res.send('Make sure the url is correct !!!');
