# Back-end/Admin-API/src/swagger.json
@@ -39,6 +39,10 @@
     {
       "name": "Coachs",
       "description": "CRUD operation for Coachs"
+    },
+    {
+      "name": "Suggestions",
+      "description": "CRUD operation for Suggestions"
     }
   ],
   "schemes": [
@@ -203,6 +207,17 @@
         },
         "isHighlighted": {
           "type": "boolean"
+        }
+      }
+    },
+    "suggestion": {
+      "type": "object",
+      "properties": {
+        "idProgram": {
+          "type": "string"
+        },
+        "idUser": {
+          "type": "string"
         }
       }
     }
@@ -1512,6 +1527,151 @@
           },
           "404": {
             "description": "Coach not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/suggestions": {
+      "parameters": [
+        {
+          "name": "Authorization",
+          "in": "header",
+          "description": "Authorization header",
+          "required": true,
+          "type": "string"
+        }
+      ],
+      "get": {
+        "tags": [
+          "Suggestions"
+        ],
+        "summary": "Get all of the suggestion of the database",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/suggestion"
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": ["Suggestions"],
+        "summary": "Create an suggestion in the database",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "id of the referenced suggestion",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "idProgram": {
+                  "type": "string"
+                },
+                "idUser": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created",
+            "schema": {
+              "$ref": "#/definitions/suggestion"
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/suggestions/{id}": {
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "description": "ID of the suggestion that we want to retrieve",
+          "type": "integer"
+        },
+        {
+          "name": "Authorization",
+          "in": "header",
+          "description": "Authorization header",
+          "required": true,
+          "type": "string"
+        }
+      ],
+      "get": {
+        "tags": ["Suggestions"],
+        "summary": "Get the suggestion with the given ID",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/suggestion"
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": ["Suggestions"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "id of the referenced suggestion",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "idProgram": {
+                  "type": "string"
+                },
+                "idUser": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "summary": "Update the suggestion with the given ID",
+        "responses": {
+          "200":{
+            "description": "suggestion updated successfully",
+            "schema": {
+              "$ref": "#/definitions/suggestion"
+            }
+          },
+          "404": {
+            "description": "Suggestion not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Suggestions"],
+        "summary": "Delete the suggestion with the given ID",
+        "responses": {
+          "200": {
+            "description": "Suggestion {id} was deleted successfully"
+          },
+          "404": {
+            "description": "Suggestion not found"
           },
           "500": {
             "description": "Internal Server Error"
